@@ -3,15 +3,16 @@
  */
 package com.datasqrl.engine.database.relational.ddl.statements;
 
-import static com.datasqrl.engine.database.relational.ddl.PostgresDDLFactory.quoteIdentifier;
-
-import com.datasqrl.sql.SqlDDLStatement;
-import com.datasqrl.function.IndexType;
-import com.google.common.base.Preconditions;
-import java.util.stream.Collectors;
-import lombok.Value;
+import static com.datasqrl.engine.database.relational.AbstractJdbcStatementFactory.quoteIdentifier;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
+import com.datasqrl.function.IndexType;
+import com.datasqrl.sql.SqlDDLStatement;
+import com.google.common.base.Preconditions;
+
+import lombok.Value;
 
 @Value
 public class CreateIndexDDL implements SqlDDLStatement {
@@ -27,25 +28,20 @@ public class CreateIndexDDL implements SqlDDLStatement {
     String indexType, columnExpression;
     switch (type) {
       case TEXT:
-        columnExpression = String.format("to_tsvector('english', %s )",
-            quoteIdentifier(columns).stream().map(col -> String.format("coalesce(%s, '')", col)).collect(
+        columnExpression = "to_tsvector('english', %s )".formatted(
+            quoteIdentifier(columns).stream().map(col -> "coalesce(%s, '')".formatted(col)).collect(
                 Collectors.joining(" || ' ' || ")));
         indexType = "GIN";
         break;
-      case VEC_COSINE:
-      case VEC_EUCLID:
+      case VECTOR_COSINE:
+      case VECTOR_EUCLID:
         Preconditions.checkArgument(columns.size()==1);
         String indexModifier;
-        switch (type) {
-          case VEC_COSINE:
-            indexModifier = "vector_l2_ops";
-            break;
-          case VEC_EUCLID:
-            indexModifier = "vector_cosine_ops";
-            break;
-          default:
-            throw new UnsupportedOperationException(type.toString());
-        }
+        indexModifier = switch (type) {
+        case VECTOR_COSINE -> "vector_l2_ops";
+        case VECTOR_EUCLID -> "vector_cosine_ops";
+        default -> throw new UnsupportedOperationException(type.toString());
+        };
         columnExpression = quoteIdentifier(columns.get(0)) + " " + indexModifier;
         indexType = "HNSW";
         break;
@@ -54,8 +50,8 @@ public class CreateIndexDDL implements SqlDDLStatement {
         indexType = type.name().toLowerCase();
     }
 
-    String createTable = "CREATE INDEX IF NOT EXISTS %s ON %s USING %s (%s);";
-    String sql = String.format(createTable, indexName, tableName, indexType,
+    var createTable = "CREATE INDEX IF NOT EXISTS %s ON %s USING %s (%s)";
+    var sql = createTable.formatted(quoteIdentifier(indexName), quoteIdentifier(tableName), indexType,
         columnExpression);
     return sql;
   }
