@@ -2,11 +2,25 @@ package com.datasqrl.engines;
 
 import static org.junit.jupiter.api.Assertions.fail;
 
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.file.DirectoryStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.ResultSet;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+
 import com.datasqrl.DatasqrlTest;
-import com.datasqrl.DatasqrlTest.TestPlan;
 import com.datasqrl.FullUsecasesIT.UseCaseTestParameter;
-import com.datasqrl.MissingSnapshotException;
 import com.datasqrl.config.PackageJson;
+import com.datasqrl.config.SqrlConstants;
 import com.datasqrl.engines.TestEngine.DuckdbTestEngine;
 import com.datasqrl.engines.TestEngine.FlinkTestEngine;
 import com.datasqrl.engines.TestEngine.IcebergTestEngine;
@@ -23,25 +37,11 @@ import com.datasqrl.util.ResultSetPrinter;
 import com.datasqrl.util.SnapshotTest.Snapshot;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.module.SimpleModule;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.nio.file.DirectoryStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.sql.Connection;
-import java.sql.DriverManager;
-import java.sql.ResultSet;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
+
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.SneakyThrows;
-import scala.annotation.meta.param;
 
 @AllArgsConstructor
 public class TestExecutionEnv implements TestEngineVisitor<Void, TestEnvContext> {
@@ -63,18 +63,21 @@ public class TestExecutionEnv implements TestEngineVisitor<Void, TestEnvContext>
     }
 
     //Snapshot views
-    Map map = new ObjectMapper().readValue(rootDir.resolve("build/plan/postgres.json").toFile(),
+    Map postgresPlan = new ObjectMapper().readValue(rootDir.resolve("build/deploy/plan/postgres.json").toFile(),
         Map.class);
-    List<Map<String, Object>> view = (List<Map<String, Object>>)map.get("views");
+    List<Map<String, Object>> view = (List<Map<String, Object>>)postgresPlan.get("views");
     String url = context.env.get("JDBC_URL");
     String username = context.env.get("PGUSER");
     String password = context.env.get("PGPASSWORD");
     try (Connection conn = DriverManager.getConnection(url, username, password)) {
-      for (Map<String, Object> v : view) {
-        ResultSet resultSet = conn.createStatement()
-            .executeQuery(String.format("SELECT * FROM \"%s\"", v.get("name")));
-        String string = ResultSetPrinter.toString(resultSet, (c) -> true, (c) -> true);
-        snapshot.addContent(string, (String)v.get("name"));
+      for (Map statement : (List<Map>) postgresPlan.get("statements")) {
+        if (statement.get("type").toString().equalsIgnoreCase("view")) {
+          String viewName = (String)statement.get("name");
+          ResultSet resultSet = conn.createStatement()
+              .executeQuery("SELECT * FROM \"%s\"".formatted(viewName));
+          String string = ResultSetPrinter.toString(resultSet, (c) -> true, (c) -> true);
+          snapshot.addContent(string, viewName);
+        }
       }
     }
 
@@ -99,11 +102,7 @@ public class TestExecutionEnv implements TestEngineVisitor<Void, TestEnvContext>
 
   @Override
   public Void visit(DuckdbTestEngine engine, TestEnvContext context) {
-    if (hasTestEngine()) { //tested by Test goal
-      return null;
-    }
-
-    if (hasServerEngine()) { //Tested by graphql queries
+    if (hasTestEngine() || hasServerEngine()) { //Tested by graphql queries
       return null;
     }
 
@@ -176,7 +175,7 @@ public class TestExecutionEnv implements TestEngineVisitor<Void, TestEnvContext>
     Map<String, List<Map<String, String>>> snowflake = (Map<String, List<Map<String, String>>>) ((Map) map.get(
         "engines")).get("snowflake");
 
-    String url = (String)mapper.readValue(String.format("{\"url\": \"%s\"}",
+    String url = (String)mapper.readValue("{\"url\": \"%s\"}".formatted(
         packageJson.getEngines().getEngineConfig("snowflake").get()
             .toMap().get("url")), Map.class).get("url");
 
@@ -192,7 +191,7 @@ public class TestExecutionEnv implements TestEngineVisitor<Void, TestEnvContext>
 
       for (Map<String, String> ddls : snowflake.get("views")) {
         ResultSet execute = connection.createStatement()
-            .executeQuery(String.format("SELECT * FROM %s", ddls.get("name")));
+            .executeQuery("SELECT * FROM %s".formatted(ddls.get("name")));
         String string = ResultSetPrinter.toString(execute, (c) -> true, (c) -> true);
         snapshot.addContent(string, ddls.get("name"));
       }
@@ -211,13 +210,13 @@ public class TestExecutionEnv implements TestEngineVisitor<Void, TestEnvContext>
 
   @Override
   public Void visit(TestTestEngine engine, TestEnvContext context) {
-    DatasqrlTest test = new DatasqrlTest(null,
-        context.rootDir.resolve("build/plan"),
+    var test = new DatasqrlTest(null,
+        context.rootDir.resolve(SqrlConstants.BUILD_DIR_NAME).resolve(SqrlConstants.DEPLOY_DIR_NAME).resolve(SqrlConstants.PLAN_DIR),
         context.env);
     try {
-      int run = test.run();
+      var run = test.run();
       if (run != 0) {
-        fail();
+        fail("Test runner returned error code. Check above for failed snapshot tests (in red) or exceptions");
       }
     } catch (Exception e) {
       fail(e);
