@@ -9,6 +9,19 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.List;
+
+import org.apache.commons.io.FileUtils;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInfo;
+
 import com.datasqrl.error.ErrorCollector;
 import com.datasqrl.error.ErrorPrinter;
 import com.datasqrl.util.FileTestUtil;
@@ -17,27 +30,16 @@ import com.datasqrl.util.TestScript;
 import com.datasqrl.util.data.Nutshop;
 import com.datasqrl.util.data.Retail;
 import com.datasqrl.util.data.Sensors;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.List;
+
 import lombok.SneakyThrows;
-import org.apache.commons.io.FileUtils;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestInfo;
 
 @Disabled
 public class TestCmd {
   public static final String PLAN_SQL = "flink-plan.sql";
 
-  private static final Path OUTPUT_DIR = Paths.get("src", "test", "resources", "output");
+  private static final Path OUTPUT_DIR = Path.of("src", "test", "resources", "output");
 
-  private static final Path RESOURCES = Paths.get("src/test/resources/");
+  private static final Path RESOURCES = Path.of("src/test/resources/");
   private static final Path SUBSCRIPTION_PATH = RESOURCES.resolve("subscriptions");
   private static final Path CC_PATH = RESOURCES.resolve("creditcard");
   private static final Path PROFILES_PATH = RESOURCES.resolve("profiles");
@@ -76,7 +78,7 @@ public class TestCmd {
 
   @Test
   public void compileMutations() {
-    Path root = Paths.get("../../sqrl-examples/mutations");
+    var root = Path.of("../../sqrl-examples/mutations");
     execute(root,
         "compile", "script.sqrl",
         "schema.graphqls");
@@ -121,33 +123,15 @@ public class TestCmd {
 
   @Test
   public void compileNutshop() {
-    Path rootDir = Nutshop.INSTANCE.getRootPackageDirectory();
+    var rootDir = Nutshop.INSTANCE.getRootPackageDirectory();
     buildDir = rootDir.resolve("build");
 
-    TestScript script = Nutshop.INSTANCE.getScripts().get(1);
+    var script = Nutshop.INSTANCE.getScripts().get(1);
     execute(rootDir, "compile",
         script.getRootPackageDirectory().relativize(script.getScriptPath()).toString(),
         script.getRootPackageDirectory().relativize(script.getGraphQLSchemas().get(0).getSchemaPath()).toString(),
         "-t", OUTPUT_DIR.toString(),
         "--mnt", rootDir.toString());
-    createSnapshot();
-  }
-
-  @SneakyThrows
-  @Test
-  public void compileProfiles() {
-    execute(PROFILES_PATH, "compile",
-        "myscript.sqrl", "schema.graphqls",
-        "--profile", "profile1",
-        "--profile", "profile2",
-        "--mnt", "/example/dir"
-    );
-
-    snapshot.addContent(
-        Files.readString(PROFILES_PATH.resolve("build").resolve("package.json")));
-
-    snapshot.addContent(
-        Files.readString(PROFILES_PATH.resolve("build").resolve("deploy").resolve("docker-compose.yml")));
     createSnapshot();
   }
 
@@ -178,7 +162,7 @@ public class TestCmd {
             "-t", OUTPUT_DIR.toString(), "-a", "GraphQL");
     Path schemaFile = rootDir.resolve(GRAPHQL_NORMALIZED_FILE_NAME);
     assertTrue(Files.isRegularFile(schemaFile),
-        () -> String.format("Schema file could not be found: %s", schemaFile));
+        () -> "Schema file could not be found: %s".formatted(schemaFile));
     Files.deleteIfExists(schemaFile);
     createSnapshot();
   }
@@ -239,10 +223,10 @@ public class TestCmd {
 
   @Test
   public void compileRetail() {
-    Path rootDir = Retail.INSTANCE.getRootPackageDirectory();
+    var rootDir = Retail.INSTANCE.getRootPackageDirectory();
     buildDir = rootDir.resolve("build");
 
-    TestScript script = Retail.INSTANCE.getScript(Retail.RetailScriptNames.FULL);
+    var script = Retail.INSTANCE.getScript(Retail.RetailScriptNames.FULL);
     execute(rootDir, "compile",
         script.getRootPackageDirectory().relativize(script.getScriptPath()).toString(),
         "-t", OUTPUT_DIR.toString());
@@ -259,7 +243,7 @@ public class TestCmd {
   // SQRL #479 - Infinite loop replication
   @Test
   public void testCreditCardInfiniteLoop() {
-    Path basePath = CC_PATH;
+    var basePath = CC_PATH;
     execute(basePath,
         "compile", "creditcard.sqrl",
         "creditcard.graphqls");
@@ -270,8 +254,8 @@ public class TestCmd {
   }
 
   public static int execute(Path rootDir, StatusHook hook, String... args) {
-    RootCommand rootCommand = new RootCommand(rootDir, hook);
-    int exitCode = rootCommand.getCmd().execute(args) + (hook.isSuccess() ? 0 : 1);
+    var rootCommand = new RootCommand(rootDir, hook);
+    var exitCode = rootCommand.getCmd().execute(args) + (hook.isSuccess() ? 0 : 1);
     if (exitCode != 0) {
       fail();
     }
@@ -283,7 +267,7 @@ public class TestCmd {
     private boolean failed;
 
     @Override
-    public void onSuccess() {
+    public void onSuccess(ErrorCollector errors) {
 
     }
 
