@@ -1,27 +1,23 @@
 package com.datasqrl.packager;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.eq;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import com.datasqrl.config.PackageJsonImpl;
-import com.datasqrl.error.ErrorCollector;
-import com.datasqrl.packager.preprocess.Preprocessor;
 import java.nio.file.FileVisitOption;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import lombok.SneakyThrows;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -29,6 +25,12 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
+
+import com.datasqrl.config.PackageJsonImpl;
+import com.datasqrl.error.ErrorCollector;
+import com.datasqrl.packager.preprocess.Preprocessor;
+
+import lombok.SneakyThrows;
 
 @ExtendWith(MockitoExtension.class)
 public class PreprocessorsTest {
@@ -42,8 +44,8 @@ public class PreprocessorsTest {
   private Preprocessor secondPreprocessor;
 
   private Preprocessors.PreprocessorsContext context;
-  private Path rootDir = Paths.get("/test");
-  private Path buildDir = Paths.get("/build");
+  private Path rootDir = Path.of("/test");
+  private Path buildDir = Path.of("/build");
 
   @SneakyThrows
   @BeforeEach
@@ -64,7 +66,7 @@ public class PreprocessorsTest {
 
   @Test
   public void testMultiplePreprocessorsForSingleFile() {
-    Path fileToProcess = Paths.get("/test/src/File.java");
+    var fileToProcess = Path.of("/test/src/File.java");
     when(firstPreprocessor.getPattern()).thenReturn(Pattern.compile(".*\\.java"));
     when(secondPreprocessor.getPattern()).thenReturn(Pattern.compile("File.*"));
 
@@ -77,9 +79,9 @@ public class PreprocessorsTest {
   @SneakyThrows
   @Test
   public void testExcludedDirectories() {
-    Path includedFile = Paths.get("/test/src/File.java");
-    Path excludedDirBuild = Paths.get("/test/build");
-    Path excludedDirFile = Paths.get("/test/build/File.java");
+    Path includedFile = Path.of("/test/src/File.java");
+    Path excludedDirBuild = Path.of("/test/build");
+    Path excludedDirFile = Path.of("/test/build/File.java");
 
     when(firstPreprocessor.getPattern()).thenReturn(Pattern.compile(".*\\.java"));
     when(secondPreprocessor.getPattern()).thenReturn(Pattern.compile("File.*"));
